--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # These individuals contributed to the hbnb project in this repository 
 
 Ezra Nobrega    <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-Your Name      <Your email>
+Justin Majetich <justinmajetich@gmail.com>     
+Mesmak Habtewold <ymesmak@gmail.com>
